# f1

./: README.md  rough.txt  udp_parser.py  udp_receiver.py
edge_compute/: dash.py  kafka_producer.py  pyproject.toml  replay_store.py  udp_parser.py  udp_producer.py
flink/: dash.py  flink_fuel.py  pyproject.toml  test.py
kafka/: kafka_consumer.py
